# cosmic-ext-applet-ressources-monitor

./: .gitignore  Cargo.toml  README.md  justfile
res/: desktop_entry.desktop
src/: config.rs  main.rs  window.rs
