[package]
name = "cosmic-ext-applet-ressources-monitor"
version = "0.1.0"
authors = ["Mig <mig@maelg.com>"]
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/goujonmael/cosmic-ext-applet-ressources-monitor/"
repository = "https://github.com/goujonmael/cosmic-ext-applet-ressources-monitor.git"
rust-version = "1.83"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "ansi",
] }
tracing-log = "0.2.0"
[dependencies.sysinfo]
version = "0.29"
[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [
    "applet",
    "tokio",
    "wayland",
]

[profile.release-lto]
inherits = "release"
lto = "fat"
